Fixed css to align the image in the center.

--- a/app/src/main/assets/resources/style.css
+++ b/app/src/main/assets/resources/style.css
@@ -1,7 +1,8 @@
 
 
 img {
-    display: inline;
+    display: block;
+    margin: 0 auto;
     height: auto;
     max-width: 90%;
 }
